external-crates/move/crates/move-compiler/tests/move_2024/typing/for_syntax_methods_invalid_type.exp
error[E02019]: invalid 'syntax' method type
   ┌─ tests/move_2024/typing/for_syntax_methods_invalid_type.move:43:66
   │
43 │     public macro fun for_each<$T>($v: vector<$T>, $body: |$T| -> u64) {
   │                                                          --------^^^
   │                                                          │       │
   │                                                          │       Expected this 'for' method lambda to return a unit type
   │                                                          Invalid type signature for 'for' syntax method argument

error[E02019]: invalid 'syntax' method type
   ┌─ tests/move_2024/typing/for_syntax_methods_invalid_type.move:54:67
   │
54 │     public macro fun for_imm<$T>($v: &vector<$T>, $body: |&$T| -> u64) {
   │                                                          ---------^^^
   │                                                          │        │
   │                                                          │        Expected this 'for' method lambda to return a unit type
   │                                                          Invalid type signature for 'for' syntax method argument

error[E02019]: invalid 'syntax' method type
   ┌─ tests/move_2024/typing/for_syntax_methods_invalid_type.move:65:75
   │
65 │     public macro fun for_mut<$T>($v: &mut vector<$T>, $body: |&mut $T| -> u64) {
   │                                                              -------------^^^
   │                                                              │            │
   │                                                              │            Expected this 'for' method lambda to return a unit type
   │                                                              Invalid type signature for 'for' syntax method argument

